[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Fonts/BoldRoboto.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://CreditsPage.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 26
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 18
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[node name="CreditsPage" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -6.0
margin_right = 1.0
margin_bottom = -6.0

[node name="Credits" type="Label" parent="UI"]
margin_left = -1.0
margin_right = 322.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 1 )
text = "  Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="UI"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -165.0
margin_right = 416.0
margin_bottom = 233.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="Control" parent="UI/Buttons"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -195.0
margin_right = 196.0
margin_bottom = 174.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Creators" type="Button" parent="UI/Buttons/Top"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.5
margin_right = 120.5
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
text = "Creators"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameEngine" type="Button" parent="UI/Buttons/Top"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -121.0
margin_top = -77.0
margin_right = 121.0
custom_fonts/font = SubResource( 1 )
text = " Engine"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="Control" parent="UI/Buttons"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -189.0
margin_top = -208.0
margin_right = 190.0
margin_bottom = -35.0

[node name="Back" type="Button" parent="UI/Buttons/Bottom"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -121.5
margin_right = 123.5
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="UI/Buttons/Bottom"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -122.5
margin_top = -77.0
margin_right = 122.5
custom_fonts/font = SubResource( 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditText" type="Control" parent="UI"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -614.0
margin_top = -300.0
margin_bottom = 300.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreatorCredits" type="Popup" parent="UI/CreditText"]
visible = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -614.0
margin_bottom = 600.0

[node name="Label" type="Label" parent="UI/CreditText/CreatorCredits"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Code and 3D assets created by Ivan Martin.
Music by Joaquin Vintimilla.
"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EngineCredits" type="Popup" parent="UI/CreditText"]
visible = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -614.0
margin_bottom = 600.0

[node name="Label" type="Label" parent="UI/CreditText/EngineCredits"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "    This game uses Godot Engine, available under the following license:

    Copyright (c) 2007-2021 Juan Linietsky, Ariel Manzur. Copyright (c) 2014-2021 Godot Engine contributors.

    Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

    The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

    THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="UI/Buttons/Top/Creators" to="." method="_on_Creators_pressed"]
[connection signal="pressed" from="UI/Buttons/Top/GameEngine" to="." method="_on_GameEngine_pressed"]
[connection signal="pressed" from="UI/Buttons/Bottom/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="UI/Buttons/Bottom/Quit" to="." method="_on_Quit_pressed"]
